--- a/main.css
+++ b/main.css
@@ -9,3 +9,10 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+#red {
+  color: red;
+}
+#orange {
+  color: orange;
+}
