automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -11,8 +11,11 @@ div {
 }
 
 #red {
-  border-top-color: ;
+  border-top-color: red;
 }
 #orange {
-  color: orange;
+ border-top-color: orange;
+}
+#yellow {
+ border-top-color: yellow;
 }
