--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ div {
   border-top-color: #f00;
 }
 #orange {
- border-top-color: orange;
+ border-top-color: #ffa500;
 }
 #yellow {
  border-top-color: yellow;
