automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -17,5 +17,8 @@ div {
  border-top-color: #ffa500;
 }
 #yellow {
- border-top-color: yellow;
+ border-top-color: #ff0;
+}
+#green {
+  border-top-color: 
 }
