automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -20,5 +20,8 @@ div {
  border-top-color: #ff0;
 }
 #green {
-  border-top-color: 
+  border-top-color: #00bc3f;
+}
+#blue {
+  border-top-color: #00bc3f;
 }
